--- a/src/css/MyImages.css
+++ b/src/css/MyImages.css
@@ -1,12 +1,10 @@
-.image__list{
+.showImg{
   display: inline-block;
-  grid-gap: 0 5px;
-  grid-auto-rows: 10px;
-  padding-top: 170px;
-  padding-left: 100px;
+  padding-top: 180px;
+  padding-left: 50px;
 }
 
-.image__list img {
+.showImg img {
   border: 3px solid #05386B;
   transition: ease 0.3s;
   display: inline-block;
@@ -15,7 +13,7 @@
   height: 220px;
 }
 
-.image__list img:hover{
+.showImg img:hover{
   position: relative;
   z-index: 2;
   transform: scale(1.10);
